remove favicon, fixed margin bottom on twitter, change font style, change row gaps

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,4 +1,7 @@
- @import url('https://fonts.googleapis.com/css?family=Work+Sans');
+ @import url('https://fonts.googleapis.com/css?family=Work+Sans:regular,black');
+ @import url('https://fonts.googleapis.com/css?family=Raleway:regular,black');
+ @import url('https://fonts.googleapis.com/css?family=Rubik:regular,black');
+
 :root {
   --roadblue: 0, 53, 148;
   --navyblue: #041E42;
@@ -8,7 +11,8 @@
 
 html {
   box-sizing: border-box;
-  font-family: 'Work Sans';
+  font-family: 'Rubik';
+  font-weight: normal;
 }
 
 
@@ -25,7 +29,9 @@ body {
 
 h2 {
   font-size: 50px;
+  font-family: 'Raleway';
   font-weight: 800;
+  letter-spacing: 5px;
 }
 
 /* Layout */
@@ -63,7 +69,6 @@ h2 {
   align-items: center;
   justify-content: center;
   color: white;
-  border: 1px solid white;
   margin: 25px;;
 }
 
@@ -73,9 +78,13 @@ h2 {
 
 .headerText h1 {
   font-size: 60px;
+  letter-spacing: 5px;
+  font-weight: 500;
 }
 .headerText h4 {
   font-size: 20px;
+  font-weight: 100;
+  letter-spacing: 2px;
 }
 
 .header .button {
@@ -146,8 +155,8 @@ h2 {
 .news-item a {
   width: 100%;
   font-size: 18px;
+  font-weight: 300;
   text-decoration: none;
-  font-weight: 600;
   color: var(--navyblue);
 }
 
@@ -290,7 +299,7 @@ h2 {
 
 .twitter-container {
   display: grid;
-  margin: 15px 15px 15px 35px;
+  margin: 15px 15px 35px 35px;
   grid-gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
   justify-content: center;
@@ -299,9 +308,25 @@ h2 {
 
 .twitter-container h2 {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   grid-column: 1 / -1;
   font-size: 3em;
   font-weight: 600;
+  align-items: center;
+}
+
+.twitter-container h2:before, .twitter-container h2:after {
+  display: block;
+  content: '';
+  height: 10px;
+  margin-right: 10px;
+  background: linear-gradient(to var(--direction, left), var(--navyblue), transparent);
+}
+
+.twitter-container h2:after {
+  margin-left: 10px;
+  --direction: right;
 }
 
 .twitter-profile {
@@ -321,6 +346,7 @@ h2 {
 
 
 
+
 /* Footer */
 
 .footer {
@@ -328,6 +354,9 @@ h2 {
   /* grid-column: 1 / -1; */
   background-color: var(--pantgrey);
   height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Media Queries */
